Replace custom transformers with mapstruct's mappers